# foundation-models-benchmark

./: .gitignore  .gitmodules  CLI_COMMANDS.md  LINTING.md  README.md  aion_embeddings_analysis.ipynb  architecture.md  environment.yml  fmb.py  model_comparison_three_models.ipynb  pyproject.toml
.github/workflows/: lint.yml  tests.yml
configs/: config.yaml  paths.py
configs/embeddings/: astropt.yaml
configs/retrain/: aion.yaml  astroclip.yaml
slurm/: README.md  detect_anomalies_NFs.sbatch  generate_embeddings_aion.sbatch  generate_embeddingsastropt.sbatch  generate_tsne_embeddings.sbatch  predict_physical_param.sbatch  retrain_astropt.sbatch  retrain_euclid_codec.sbatch  retrain_euclid_codec_hsc_adapt.sbatch
slurm/01_retrain/: aion_adapter.sbatch  aion_codec.sbatch  astroclip.sbatch  astropt.sbatch
slurm/02_embeddings/: aion.sbatch  astroclip.sbatch  astropt.sbatch
slurm/03_detection/: cosine.sbatch  multimodal.sbatch  nfs.sbatch
slurm/04_analysis/: outliers.sbatch  physical_params.sbatch  predict_params.sbatch  tsne.sbatch
slurm/05_viz/: README.md  paper_umap.sbatch
src/fmb/: README.md  __init__.py  cli.py  paths.py
src/fmb/analysis/: README.md  analyze_anomaly_correlations.py  analyze_anomaly_results.py  analyze_embeddings.py  analyze_neighbor_ranks.py  calculate_image_distribution.py  compare_codecs_recon.py  compare_hsc_euclid_normalization.py  compare_hsc_recon.py  compute_cosine_similarity_astropt.py  compute_dataset_stats.py  compute_flux_history.py  displacement.py  outliers.py  (+4 more)
tests/: base.py
tests/integration/: test_embeddings_config.py
(+136 files in other folders)
